P2 terminada. Revisar comentarios

--- a/p2/.vscode/settings.json
+++ b/p2/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "files.associations": {
-        "sstream": "cpp"
-    }
+        "sstream": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp",
+        "condition_variable": "cpp",
+        "*.rh": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "Enabled"
 }
